# youtube-cli

./: .gitignore  CHANGELOG.md  FORCodex.md  README.md  RELEASE-BODY-0.1.0.md  SCHEMA.md  SKILL.md  TESTING.md  pyproject.toml
.github/workflows/: ci.yml
docs/: feature-matrix.md
releases/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.2.0.md  v0.2.1.md
src/youtube_cli/: cli.py  config.py  errors.py  metrics.py  normalize.py  output.py  subtitles.py  translation.py
src/youtube_cli/providers/: __init__.py  yt_dlp_provider.py
src/youtube_cli/reverse/: __init__.py  write_api.py
tests/: test_cli.py  test_download_manifest.py  test_provider_channel_tabs.py  test_subtitles.py  test_write_api.py
